tests/ui/g-par-role-conflict.stderr
error[E0080]: evaluation panicked: parallel lanes must use disjoint (role, lane) pairs
 --> src/global/program/source.rs
  |
  | /         <Left as crate::g::ChoreographyTerm>::SOURCE
  | |             .par(<Right as crate::g::ChoreographyTerm>::SOURCE)
  | |_______________________________________________________________^ evaluation of `hibana::global::program::source::<impl hibana::g::ChoreographyTerm for hibana::g::Par<hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<1>, hibana::g::Msg<3, ()>>, hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<2>, hibana::g::Msg<4, ()>>>>::SOURCE` failed inside this call
  |
note: inside `hibana::global::program::source::ProgramSourceData::par`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/global/program/source.rs
  |
  |             panic!("parallel lanes must use disjoint (role, lane) pairs");
  |             ------------------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/global/program/source.rs
  |
  |         let source = <Steps as crate::g::ChoreographyTerm>::SOURCE.eff_list();
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/program/source.rs
  |
  |     &ValidatedProgram::<Steps>::PROGRAM_IMAGE
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/role_program/program.rs
  |
  |                 Self::STAMP,
  |                 ^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/role_program/program.rs
  |
  |     RoleProgram::new(&ValidatedRoleImage::<Steps, ROLE>::COMPILED_IMAGE)
  |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/role_program/program.rs
  |
  |     RoleProgram::new(&ValidatedRoleImage::<Steps, ROLE>::COMPILED_IMAGE)
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn hibana::global::role_program::program::project_typed_program::<0, Par<hibana::g::Send<Role<0>, Role<1>, Msg<3, ()>>, hibana::g::Send<Role<0>, Role<2>, Msg<4, ()>>>>`
 --> src/global/role_program/program.rs
  |
  |         project_typed_program(self)
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
